# Tract3D

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: cmake-multi-platform.yml
data/tck files/: AF_left.tck  AF_right.tck  ATR_left.tck  ATR_right.tck  CA.tck  CC.tck  CC_1.tck  CC_2.tck  CC_3.tck  CC_4.tck  CC_5.tck  CC_6.tck  CC_7.tck  CG_left.tck  CG_right.tck  CST_left.tck  CST_right.tck  FPT_left.tck  FPT_right.tck  FX_left.tck  FX_right.tck  ICP_left.tck  ICP_right.tck  IFO_left.tck  IFO_right.tck  ILF_left.tck  ILF_right.tck  MCP.tck  MLF_left.tck  MLF_right.tck  OR_left.tck  OR_right.tck  POPT_left.tck  POPT_right.tck  SCP_left.tck  SCP_right.tck  SLF_III_left.tck  SLF_III_right.tck  SLF_II_left.tck  SLF_II_right.tck  (+32 more)
glfw-3.3.9/: CMakeLists.txt
glfw-3.3.9/CMake/modules/: FindXKBCommon.cmake
glfw-3.3.9/docs/html/: jquery.js
glfw-3.3.9/include/GLFW/: glfw3.h
glfw-3.3.9/src/: CMakeLists.txt
include/: glad.c  logger.h  path.h
include/glad/: glad.h
include/learnopengl/: shader_s.h
src/: AbstractWrapper.cpp  AbstractWrapper.h  Bvh.cpp  Bvh.h  GLFWWrapper.cpp  GLFWWrapper.h  ImGuiWrapper.cpp  ImGuiWrapper.h  LineShading.fsh  PathTraceWrapper.cpp  PathTraceWrapper.h  Ray.cpp  Ray.h  RayTrace.fsh  RayTrace.vsh  RayTraceWrapper.cpp  RayTraceWrapper.h  RayTracer.cpp  RayTracer.h  RenderSettings.h  TractData.cpp  TractData.h  TractDataWrapper.cpp  TractDataWrapper.h  basic.fsh  basic.geom  basic.vsh  logger.h  main.cpp  path.cpp  path.h  ptBVHCompute.comp  ptCompute.comp  ptRender.vsh  rtBVHCompute.comp  rtCompute.comp  rtRender.fsh  tubes.fsh  tubes.geom  tubes.vsh
